# Boxed-Logic-Dojo

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
dojo/: __init__.py  config.py  dataset.py  episode.py  logprobs.py  loss.py  rollout.py  tools.py  trainer.py  vllm_rollout.py  weight_sync.py
examples/gsm8k/: README.md  config.json  eval.py  prepare_dataset.py  rewards.py  tools.py  train.py
tests/: test_dataset.py  test_episode.py  test_logprobs.py  test_loss.py  test_rollout.py  test_tools.py  test_vllm_rollout.py  test_weight_sync.py
