[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boxed-logic-dojo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "peft",
    "safetensors",
    "huggingface_hub",
    "datasets",
]

[tool.setuptools.packages.find]
include = ["dojo*"]
